Panel de administracion y solucion persistencia de usuarios